fixed spacing on abuot lightbox

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1468,7 +1468,7 @@ float: left;
 
 #aboutParms {
     margin: 30px auto;
-    width: 215px;
+    width: 218px;
     font-family: 'din-medium', helvetica, sans-serif;
 }
 #leftAboutParms {
